--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE HTML>
 <html>
-
+<head>
+   <style>
+        html,body,canvas { margin: 0; padding: 0; width: 100%; height: 100%; font-size: 0; }
+    </style>  
+</head>
 <body>
 
   <p>Before the script...</p>
+  <canvas id="render-canvas"></canvas>
+  <script src='js/test.js'></script>
 
-  <script src='js/test.js''></script>
-    
-  <p>...After the script.</p>
+  <p id="text">After the script... </script></p>
 
 </body>
 
