--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 <html>
 <head>
    <style>
-        html,body,canvas { margin: 0; padding: 0; width: 100%; height: 100%; font-size: 0; }
-    </style>  
+        #render-canvas {
+            margin-left: 10px;
+            margin-top: 10px;
+            background: #ffffff;
+            border: thin solid #aaaaaa;
+         }
+    </style> 
+    <script src="https://cdn.babylonjs.com/babylon.js"></script> 
+    <script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 </head>
 <body>
+  <div>
+    <p>Before the script...</p>
+  </div>
 
-  <p>Before the script...</p>
   <canvas id="render-canvas"></canvas>
+  <canvas id="line-chart" width="800" height="450"></canvas>
   <script src='js/test.js'></script>
-
-  <p id="text">After the script... </script></p>
-
+  
 </body>
 
 </html>
