--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
             margin-top: 10px;
             background: #ffffff;
             border: thin solid #aaaaaa;
+            width: 1200px;
+            height: 800px;
          }
+         #line-chart{
+            margin-left: 10px;
+            margin-top: 10px;
+            background: #ffffff;
+            border: thin solid #aaaaaa;
+            width: 1200px !important;
+            height: 800px !important;
+         } 
+        
     </style> 
     <script src="https://cdn.babylonjs.com/babylon.js"></script> 
     <script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js"></script>
@@ -19,7 +30,7 @@
   </div>
 
   <canvas id="render-canvas"></canvas>
-  <canvas id="line-chart" width="800" height="450"></canvas>
+  <canvas id="line-chart"></canvas>
   <script src='js/test.js'></script>
   
 </body>
