--- a/index.html
+++ b/index.html
@@ -1,38 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-   <style>
-        #render-canvas {
-            margin-left: 10px;
-            margin-top: 10px;
-            background: #ffffff;
-            border: thin solid #aaaaaa;
-            width: 1200px;
-            height: 800px;
-         }
-         #line-chart{
-            margin-left: 10px;
-            margin-top: 10px;
-            background: #ffffff;
-            border: thin solid #aaaaaa;
-            width: 1200px !important;
-            height: 800px !important;
-         } 
-        
-    </style> 
-    <script src="https://cdn.babylonjs.com/babylon.js"></script> 
-    <script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+  <script src="https://d3js.org/d3.v6.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+  <script src='js/animate.js'></script>  
+  <script src='js/people.js'></script> 
+  <link rel="stylesheet" type="text/css" href="stylesheet.css"> 
 </head>
 <body>
   <div>
-    <p>Before the script...</p>
+    <h1>Before the script...</h1>
   </div>
 
-  <canvas id="render-canvas"></canvas>
-  <canvas id="line-chart"></canvas>
-  <script src='js/test.js'></script>
+  <button type="button" id='start'>Move</button>
   
+<script src='js/test.js'></script>   
+
 </body>
 
 </html>
