--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <script src="https://d3js.org/d3.v6.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.6.0/dist/tf.min.js"></script>
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.6.0/dist/tf.min.js"></script>
   <script src='js/animate.js'></script>  
   <script src='js/people.js'></script> 
-  <link rel="stylesheet" type="text/css" href="stylesheet.css"> 
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.css"> 
 </head>
 <body>
   <div>
