--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css"> 
 </head>
 <body>
-  <div>
-    <h1>Before the script...</h1>
-    <button type="button" id='start'>Move</button>
+  <div class="flex-container">
+    <div class="flex-child"><button type="button" id='start' class="button">Move</button></div>
+    <div class="flex-child">
+    <label class="switch switch-flat">
+    	<input id='rect-create' class="switch-input" type="checkbox" />
+    	<span class="switch-label" data-on="Create" data-off="Create"></span> 
+  	  <span class="switch-handle"></span> 
+    </label>
+    </div>  
   </div>
 
   
-  
-<script src='js/test.js'></script>   
-
+<script src='js/trends.js'></script>
+<script src='js/app.js'></script>
+<script src='js/test.js'></script> 
 </body>
 
 </html>
